[tool.poetry]
name = "tensor-client-py"
version = "0.1.0"
description = ""
authors = ["Alex Lau <alexlauwh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
solana = "^0.30.2"
loguru = "^0.7.2"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
shellcheck-py = "^0.8.0.4"

[tool.mypy]
exclude = "(env|venv|.env|.venv|temp|^migrations)"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.isort]
profile = "black"
skip = ["env", "venv", ".env", ".venv", "cache", "migrations"]

[tool.flake8]
max-line-length = 120
exclude = ["env", "venv", ".env", ".venv", "temp"]
ignore = ['W503']

[tool.black]
exclude = '^/migrations|.venv'

[build-system]
requires = ["poetry-core=1.2.2"]
build-backend = "poetry.core.masonry.api"
